--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         version_kotlin = "1.3.21"
         version_lifecycle_extensions = "2.0.0"
         arch_lifecycle_version = '2.2.0-rc02'
-        version_navigation = "2.2.2"
+        version_navigation = "2.3.5"
         room_version = "2.2.5"
         timberVersion = "4.7.1"
         dagger_version = "2.35.1"
@@ -52,6 +52,7 @@ buildscript {
         truthVersion = '0.44'
         okHttp_version = '4.9.0'
         moshi_version = "1.12.0"
+        paging_version = "3.0.0"
     }
 
     repositories {
