--- a/data/build.gradle
+++ b/data/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation rootProject.ext.moshi
     implementation rootProject.ext.moshi_kotlin
 
+    implementation rootProject.ext.paging_library
+
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutine"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutine"
