--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -52,8 +52,6 @@ dependencies {
     implementation project(':data')
     implementation project(':domain')
 
-
-
     implementation "androidx.core:core-ktx:$version_core"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -102,6 +100,8 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
 
     // Timber
     implementation "com.jakewharton.timber:timber:$timber_version"
