--- a/build.gradle
+++ b/build.gradle
@@ -6,23 +6,24 @@ buildscript {
     ext {
         kotlin_version = "1.4.21"
         android_plugin_version = '2.2.0-alpha4'
-        version_core = "1.3.2"
-        version_coroutine = "1.3.7"
+        version_core = "1.6.0"
+        version_coroutine = "1.5.0"
         version_constraint_layout = "1.1.3"
-        version_gradle = '3.3.0'
-        version_kotlin = "1.3.21"
-        version_lifecycle_extensions = "2.0.0"
-        arch_lifecycle_version = '2.2.0-rc02'
+        version_gradle = "4.2.2"
+        version_kotlin = "1.5.20"
+        version_kotlin_reflect = "1.5.20"
+        version_lifecycle_extensions = "2.2.0"
+        arch_lifecycle_version = '2.3.1'
         version_navigation = "2.3.5"
         room_version = "2.2.5"
         timberVersion = "4.7.1"
         dagger_version = "2.35.1"
-        fragmentKtx_version = '1.3.3'
+        fragmentKtx_version = '1.3.5'
         retrofit_version = "2.9.0"
         version_retrofit_coroutines_adapter = "0.9.2"
-        material_version = "1.3.0-alpha03"
+        material_version = "1.4.0"
         version_glide = "4.8.0"
-        version_recyclerview = "1.0.0"
+        version_recyclerview = "1.2.1"
         rxJava_version = "2.2.19"
         rxAndroid_version = "2.1.1"
         androidXVersion = '1.0.0'
