--- a/data/build.gradle
+++ b/data/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
     implementation rootProject.ext.paging_library
 
+    // Timber
+    implementation "com.jakewharton.timber:timber:$timber_version"
+
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutine"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutine"
